# WANN-SDK

./: APIs.md  LICENSE  README.md  pyproject.toml  test_sdk.py
.github/workflows/: test.yml
core/: __init__.py  wann_sdk_brax_env.py  wann_sdk_core.py  wann_sdk_ray_env.py  wann_sdk_rl_methods.py  wann_tensorneat.py
docs/: APIs.md  distributed_evaluation.md  optimizers.md  trainability_aware_search.md  wann_sdk_documentation.md
example/: wann_bipedal.py
examples/: custom_problem.py  distributed_search.py  quickstart.py  train_gymnax.py  train_humanoid.py  train_mnist.py  trainability_aware_search.py  wann_pipeline.py  wann_search.py
tests/: __init__.py  conftest.py  test_basic.py  test_optimizers.py  test_pipeline.py  test_zcp.py
wann_sdk/: __init__.py  activation_approx.py  algorithm.py  architecture.py  distributed.py  environments.py  export.py  problem.py  search.py  trainability_search.py  trainer.py  training.py  weight_trainer.py
wann_sdk/deprecated/: __init__.py  ray_env.py
wann_sdk/optimizers/: __init__.py  base.py  es.py  jaxopt_optimizers.py  nevergrad_optimizers.py  optax_optimizers.py
wann_sdk/zero_cost_proxies/: __init__.py  activation_based.py  evaluator.py  gradient_based.py  trainability.py
